maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: ')' expected but ';' found.
def Coord_voisins(x:Int ;y:Int):Array[Int,Int] = {
                        ^JediEscaper:16: error: ';' expected but ')' found.
def Coord_voisins(x:Int ;y:Int):Array[Int,Int] = {
                              ^